v2.8.1 Fix bug with DataConverterType class